--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine on
-RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+
+# Remove both .html extension and /index from main index.html
+RewriteCond %{THE_REQUEST} /(index|[^.]+)\.html [NC]
 RewriteRule ^ /%1 [NC,L,R]
- 
+
+# Remove .html extension for other pages
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^ %{REQUEST_URI}.html [NC,L]
